# esp_ble_websocket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  ble_websocket.c  idf_component.yml
main/include/: ble_app.h  common.h  gap.h  gatt_svc.h  heart_rate.h  led.h  websocket_bridge.h
main/src/: ble_app.c  gap.c  gatt_svc.c  heart_rate_mock.c  led.c
